Disable the content be selectable to prevent from displaying copy option on iOS once user touch an element for a while

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -4,6 +4,7 @@ html, body {
 	font-size: 16px;
 	font-weight: normal;
 	@include whole-fill;
+	user-select: none;
 }
 
 #app {
